tests/ui/simd/scalable/illformed-in-types.stderr
error: scalable vectors cannot be fields of a variant
  --> $DIR/illformed-in-types.rs:18:14
   |
LL |     Scalable(ScalableFloat),
   |              ^^^^^^^^^^^^^

error: scalable vectors cannot be fields of a struct
  --> $DIR/illformed-in-types.rs:22:8
   |
LL |     v: ScalableFloat,
   |        ^^^^^^^^^^^^^

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> $DIR/illformed-in-types.rs:26:5
   |
LL |     v: ScalableFloat,
   |     ^^^^^^^^^^^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
LL |     v: std::mem::ManuallyDrop<ScalableFloat>,
   |        +++++++++++++++++++++++             +

error: scalable vectors cannot be fields of a union
  --> $DIR/illformed-in-types.rs:26:8
   |
LL |     v: ScalableFloat,
   |        ^^^^^^^^^^^^^

error: scalable vectors cannot be fields of a variant
  --> $DIR/illformed-in-types.rs:32:14
   |
LL |     Scalable(<ScalableFloat as WithAssocTy>::Ty),
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors cannot be fields of a struct
  --> $DIR/illformed-in-types.rs:36:8
   |
LL |     v: <ScalableFloat as WithAssocTy>::Ty,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> $DIR/illformed-in-types.rs:40:5
   |
LL |     v: <ScalableFloat as WithAssocTy>::Ty,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
LL |     v: std::mem::ManuallyDrop<<ScalableFloat as WithAssocTy>::Ty>,
   |        +++++++++++++++++++++++                                  +

error: scalable vectors cannot be fields of a union
  --> $DIR/illformed-in-types.rs:40:8
   |
LL |     v: <ScalableFloat as WithAssocTy>::Ty,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors cannot be array elements
  --> $DIR/illformed-in-types.rs:46:12
   |
LL |     let x: [ScalableFloat; 2];
   |            ^^^^^^^^^^^^^^^^^^

error: scalable vectors cannot be tuple fields
  --> $DIR/illformed-in-types.rs:47:12
   |
LL |     let y: (ScalableFloat, u32);
   |            ^^^^^^^^^^^^^^^^^^^^

error: scalable vectors cannot be tuple fields
  --> $DIR/illformed-in-types.rs:48:12
   |
LL |     let z: (u32, ScalableFloat);
   |            ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0740`.
